--- a/ItDepends.WinForms/ItDepents.WinForms/Form1.resx
+++ b/ItDepends.WinForms/ItDepents.WinForms/Form1.resx
@@ -117,6 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="uxGraphViewer.Transform" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdBdXRvbWF0aWNHcmFwaExheW91dCwgVmVyc2lvbj0wLjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPTZiYWEyYzEzNDVlODNiNmUFAQAAADhNaWNy
+        b3NvZnQuTXNhZ2wuQ29yZS5HZW9tZXRyeS5DdXJ2ZXMuUGxhbmVUcmFuc2Zvcm1hdGlvbgEAAAAIZWxl
+        bWVudHMDEVN5c3RlbS5Eb3VibGVbXVtdAgAAAAkDAAAABwMAAAABAQAAAAIAAAAHBgkEAAAACQUAAAAP
+        BAAAAAMAAAAGAAAAAAAA8D8AAAAAAAAAAAAAAAAAAAAADwUAAAADAAAABgAAAAAAAAAAAAAAAAAA8D8A
+        AAAAAAAAAAs=
+</value>
+  </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -154,7 +164,7 @@
         TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="uxShowProjectReferences.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="uxShowPackageReferences.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
@@ -169,7 +179,7 @@
         TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="uxShowPackageReferences.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="uxSaveAsGraphViz.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
